--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,8 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-        
+        compile 'com.github.czyzby:noise4j:0.1.0'
+
     }
 }
 
